--- a/index.html
+++ b/index.html
@@ -17,26 +17,18 @@
 
 <body>
 
+<nav>
+    <div class="navtitle">UltraSoft</div>
+    <a href="">Projects</a>
+</nav>
+
 <header>
-    <nav>
-        <div class="navtitle">UltraSoft</div>
-    </nav>
-    <div class="cardflip">
-        <div class="cardflip-inner">
-          <div class="cardflip-front">
-            <span class="h4">Hello, </span> <span class="h1">Welcome</span>
-          </div>
-          <div class="cardflip-back">
-            <h5>Click or Hover over the balls</h5>
-          </div>
+    <div class="center">
+        <div class="text-center">
+            <h2 class="title">We Build, we make, we do all sorts of things</h2>
+            <a class="btn">Our Projects</a>
         </div>
     </div>
-    <div class="headerbtn">
-        <a class="btn">Our Projects</a>
-    </div>
-    <div class="bubble"></div>
-    <div class="bubble1"></div>
-    <div class="ball"></div>
 </header>
 
 <section>
