--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 
 <nav>
     <div class="navtitle">UltraSoft</div>
-    <a href="">Projects</a>
+    <a href="#" class="scroll-to">Projects</a>
 </nav>
 
 <header>
     <div class="center">
         <div class="text-center">
             <h2 class="title">We Build, we make, we do all sorts of things</h2>
-            <a class="btn">Our Projects</a>
+            <a href="#" class="btn scroll-to">Our Projects</a>
         </div>
     </div>
 </header>
 
 <section>
-    <div class="container">
+    <div class="container" id="goto">
         <div class="row">
             <div class="col jus-center">
                 <h2 class="bold">Our Projects</h2>
@@ -69,12 +69,9 @@
 </section>
 
 
-
-
-
-
-
-
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="./js/custom.js"></script>
+<script src="./js/waypoint.js"></script>
+    
 </body>
 </html>
