--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header>
     <div class="center">
         <div class="text-center">
-            <h2 class="title">We Build, we make, we do all sorts of things</h2>
+            <h2 class="title">We build, We make, We do all sorts of things</h2>
             <a href="#" class="btn scroll-to">Our Projects</a>
         </div>
     </div>
