--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
     </div>
 </section>
 
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col"> </div>
+            <div class="col jus-end">© UltraSoft | Made using <a href="https://github.com/TeamUltraSoft/UltraCSS">UltraCSS</a></div>
+        </div>
+    </div>
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="./js/custom.js"></script>
