--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
                 <img src="./img/ultracss.png">
                 <div class="grid-box-back">
                     <div class="grid-box-text">
-                        <p>A simple css framework</p>
+                        <p>A simple CSS framework</p>
                         <a href="https://github.com/TeamUltraSoft/UltraCSS" class="btn btn-outline">UltraCSS</a>
                     </div>
                 </div>
             </div>
-            <div class="grid-box">
-                <img src="./img/">
+            <div class="grid-box p2">
+                <img src="./img/pocketmineschool.png">
                 <div class="grid-box-back">
                     <div class="grid-box-text">
-                        <p> </p>
-                        <a href="https://github.com/TeamUltraSoft/UltraCSS" class="btn btn-outline">    </a>
+                        <p>A website to teach everything about PocketMine-MP</p>
+                        <a href="https://teamultrasoft.github.io/Pocketmine-School/" class="btn btn-outline">Pocketmine School</a>
                     </div>
                 </div>
             </div>
