--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="grid-box-back">
                     <div class="grid-box-text">
                         <p>A website to teach everything about PocketMine-MP</p>
-                        <a href="https://teamultrasoft.github.io/Pocketmine-School/" class="btn btn-outline">Pocketmine School</a>
+                        <a href="https://teamultrasoft.netlify.app/pocketmine-school/" class="btn btn-outline">Pocketmine School</a>
                     </div>
                 </div>
             </div>
